# audio-man

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test_console.cpp
.github/workflows/: cmake-multi-platform.yml
audio_man/: audio_man.cpp  audio_man.hpp
audio_man/private/: audio_man_impl.cpp  audio_man_impl.hpp  silence_filter.cpp  silence_filter.hpp
audio_man/private/playback/: playback.cpp  playback.hpp
audio_man/private/recording/: recording.cpp  recording.hpp
audio_man/private/recording/mic_gain/: mic_gain.cpp  mic_gain.hpp
audio_man/private/recording/silence_filter/: silence_filter.cpp  silence_filter.hpp
